--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -2,5 +2,7 @@
     <item
         android:id="@+id/delete"
         android:title="Delete" />
-
+    <item
+        android:id="@+id/mark_complete"
+        android:title="Mark as Complete" />
 </menu>
