--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -4,5 +4,5 @@
         android:title="Delete" />
     <item
         android:id="@+id/mark_complete"
-        android:title="Mark as Complete" />
+        android:title="Hecha" />
 </menu>
